# CFR_simultaneous

./: .gitignore  CMakeLists.txt  Makefile  README.md  compute_animation_from_export.py  main.c  requirements.txt
ColonelBlotto/: main.c
ColonelBlotto/include/: tree.h
ColonelBlotto/src/: tree.c
RockPaperScissor/: main.c
RockPaperScissor/include/: xorshiro256.h
RockPaperScissor/src/: xorshiro256.c
include/: combinatory.h  game.h  player.h  splitmix64.h  utility.h  xorshiro256.h
src/: combinatory.c  game.c  player.c  splitmix64.c  utility.c  xorshiro256.c
